--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "slick-carousel": "^1.8.1"
   }
 }
